styles/main.css
#portfolio-header {
  background: url(../images/header.png) center / cover;
  height: 60vh;
  justify-content: center;
  text-align: center;
}

body {
  padding-bottom: 5rem;
}

h1 {
  color: hsla(0, 0%, 100%, 0.9);
  font-weight: bold;
}

.slogan {
  color: hsl(29, 86%, 80%);
  font-weight: lighter;
  font-size: 1.6rem;
  padding-bottom: 100px;
}

main {
   max-width: 900px;
 }

 .project-description {
   padding-left: 0;
 }

 .project img {
   width: 100%;
 }

 footer.mdl-mini-footer {
   bottom: 0;
   padding: 0.5rem;
   position: fixed;
   width: 100%;
   z-index: 1;
 }

 footer.mdl-mini-footer > ul {
   margin: auto;
   font-size: 2rem;
 }

 @media screen and (max-width: 1024px) {
   header.mdl-layout__header {
     display: flex;
   }
 }

